[gd_scene load_steps=4 format=3 uid="uid://newgamesetup001"]

[ext_resource type="Script" path="res://src/scenes/NewGameSetupScene.gd" id="1_scene"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.06, 0.06, 0.1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.25, 0.35, 1)
corner_radius_left_top = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_left_bottom = 8

[node name="NewGameSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_scene")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 30.0
offset_right = -40.0
offset_bottom = -30.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "NEW EXPEDITION"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Configure your expedition and choose your starting team leaders"
horizontal_alignment = 1

[node name="SeedPanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="HBox" type="HBoxContainer" parent="VBox/SeedPanel"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="VBox/SeedPanel/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Seed:"
vertical_alignment = 1

[node name="SeedInput" type="LineEdit" parent="VBox/SeedPanel/HBox"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Random seed..."

[node name="RandomBtn" type="Button" parent="VBox/SeedPanel/HBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Random"

[node name="DifficultyPanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="HBox" type="HBoxContainer" parent="VBox/DifficultyPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBox/DifficultyPanel/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Difficulty:"
vertical_alignment = 1

[node name="DifficultyOptions" type="HBoxContainer" parent="VBox/DifficultyPanel/HBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ClassLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Select 2 Starting Classes"
horizontal_alignment = 1

[node name="ClassPanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/ClassPanel"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ClassGrid" type="GridContainer" parent="VBox/ClassPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 5
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16

[node name="SelectedLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Starting Team Leaders"
horizontal_alignment = 1

[node name="SelectedPanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="SelectedCrews" type="HBoxContainer" parent="VBox/SelectedPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="BottomBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 40

[node name="BackBtn" type="Button" parent="VBox/BottomBar"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "BACK"

[node name="StartBtn" type="Button" parent="VBox/BottomBar"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
disabled = true
theme_override_font_sizes/font_size = 20
text = "START EXPEDITION"
